# dashboard

./: db.sqlite3  nohup.out  pyproject.toml  requirements.txt  vercel.json
dashboard/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dashboard/constants/: constants.py
dashboard/jobs/: jobs.py  updater.py
dashboard/migrations/: 0001_initial.py  0002_alter_user_uniqueid.py  0003_rename_uniqueid_user_id.py  0004_activity.py  0005_alter_activity_useractivity.py  0006_alter_user_email_alter_user_usertype.py  0007_remove_user_usertype_user_department_user_expert_and_more.py  0008_alter_user_grade.py  0009_remove_user_department_remove_user_expert_and_more.py  0010_alter_user_grade.py  0011_user_position.py  0012_user_hrcode.py  0013_alter_user_grade_alter_user_hrcode.py  0014_alter_user_grade.py  0015_alter_user_grade.py  0016_alter_user_grade.py  0017_rename_grade_user_usergrade.py  0018_rename_usergrade_user_grade.py  0019_user_department_user_expert_user_ismobilized_and_more.py  0020_alter_user_natgroup.py  0021_alter_user_email.py  0022_user_organizationcode.py  0023_remove_user_ismobilized_user_mobilization.py  0024_user_company.py  0025_activity_activitytype_alter_activity_useractivity_and_more.py  0026_alter_activity_activitytype.py  0027_alter_activity_activitytype.py  0028_alter_activity_activitytype_alter_activity_created.py  0029_company_alter_user_company.py  0030_remove_user_company_delete_company.py  0031_company_user_company.py  0032_user_isaccepted.py  (+21 more)
dashboardAPI/: asgi.py  settings.py  urls.py  wsgi.py
static/: staticfiles.json
(+3 files in other folders)
